Finish the thingymajig