@@ -41,23 +41,33 @@ public class NBTHelper {
         return tag.contains(extra + "_X") ? new BlockPos(tag.getInt(extra + "_X"), tag.getInt(extra + "_Y"), tag.getInt(extra + "_Z")) : null;
     }
 
-    public static CompoundTag filterTag(CompoundTag tag, String... filters) {
-        return filterTag(tag, List.of(filters));
-    }
-
-    public static CompoundTag filterTag(CompoundTag tag, Collection<String> filters) {
-        return filterTags(tag.copy(), filters);
+    public static CompoundTag filterTags(CompoundTag tag, String... filters) {
+        return filterTags(tag, new HashSet<>(Arrays.asList(filters)));
     }
 
     /**
      * Filters out any nbt from a CompoundTag with a key that doesn't match any of the filters.
      * Nested CompoundTags are also filtered.
      * If you want to filter a nested CompoundTag, you'll need to pass a "path" towards the nbt you want to keep.
-     * An example of this would be passing "fireEffect" and "fireEffect/duration".
-     * The CompoundTag under the name of "fireEffect" would be kept, but everything except "duration" inside it would be removed.
+     * An example of this would be passing "fireEffect/duration".
+     * The CompoundTag under the name of "fireEffect" would be kept, but everything inside it except "duration" would be removed.
      */
-    public static CompoundTag filterTags(CompoundTag tag, Collection<String> filters) {
+    public static CompoundTag filterTags(CompoundTag tag, Set<String> filters) {
         CompoundTag newTag = new CompoundTag();
+
+        Set<String> subFilters = new HashSet<>();
+        //We look through all the filters, and make sure that each filter also has its path as a separate filter
+        //In case of "fireEffect/duration", this for loop would just add "fireEffect" as its own filter to our list of filters.
+        filters.forEach(s -> {
+            while (s.contains("/")) {
+                int index = s.lastIndexOf("/");
+                String path = s.substring(0, index);
+                subFilters.add(path);
+                s = path;
+            }
+        });
+        filters.addAll(subFilters);
+
         //We look through the NBT and copy any Tags with a key that "filters" contains.
         for (String filter : filters) {
             Tag entry = tag.get(filter);
@@ -65,7 +75,7 @@ public class NBTHelper {
                 //If the entry we copied over is a CompoundTag, we also apply our filters to the CompoundTag.
                 //If that CompoundTag also contains a CompoundTag, it will also be filtered.
                 if (entry instanceof CompoundTag compoundEntry) {
-                    Collection<String> updatedFilters = filters.stream().filter(s -> s.contains(filter+"/")).map(s -> s.substring(s.indexOf("/")+1)).collect(Collectors.toList());
+                    Set<String> updatedFilters = filters.stream().filter(s -> s.contains(filter+"/")).map(s -> s.substring(s.indexOf("/")+1)).collect(Collectors.toSet());
                     if (!updatedFilters.isEmpty()) {
                         entry = filterTags(compoundEntry, updatedFilters);
                     }
